<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/syriatel_sim"
        android:icon="@android:color/background_dark"
        android:title="@string/syriatel_key"></item>

    <item
        android:id="@+id/mtn_sim"
        android:icon="@android:color/background_dark"
        android:title="@string/mtn_key"></item>

    <item
        android:id="@+id/sims_position"
        android:title="@string/sims_position"></item>

    <item
        android:id="@+id/clear_data"
        android:icon="@android:color/background_dark"
        android:title="@string/clear_data"></item>

    <item
        android:id="@+id/about"
        android:title="@string/about"></item>

    <item
        android:id="@+id/exit"
        android:title="@string/exit"></item>
</menu>