<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:background="#C3ECE4E4"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-161dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/contact"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/contac" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="15"
                android:hint="@string/number"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/send"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/send" />
            <EditText
                android:id="@+id/rsed"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="15"
                android:hint="@string/rsed"
                android:imeOptions="actionDone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="#64b5f6"
                android:onClick="clean_all"
                android:text="@string/clear" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:onClick="replay"
                android:textAllCaps="false"
                android:background="#64b5f6"
                android:text="@string/replay_number" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:onClick="replay_process"
                android:background="#64b5f6"
                android:text="@string/replay_process" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="128dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:background="#1565c0"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>